# hbrc_robots

scout/scout/: CMakeLists.txt  package.xml
scout/scout_apps/: CMakeLists.txt  mainpage.dox  package.xml
scout/scout_apps/launch/: wander.launch
scout/scout_apps/nodes/: wander.py
scout/scout_bringup/: CMakeLists.txt  mainpage.dox  package.xml
scout/scout_bringup/config/: arduino_params.yaml
scout/scout_bringup/launch/: scout.launch
scout/scout_bringup/nodes/: fake_wheel_pub.py  filter_sensor_data.py  virtual_sensors.py
scout/scout_description/: CMakeLists.txt  mainpage.dox  package.xml
scout/scout_description/launch/: test_urdf.launch
scout/scout_description/urdf/: base.urdf.xacro  scout.urdf.xacro
scout/scout_teleop/: CMakeLists.txt  mainpage.dox  package.xml
