<package>
  <name>scout</name>
  <version>0.1.0</version>

  <description>Scout Robot Metapackage</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/hbrobotics/hbrc_robots/scout</url>
  <url type="bugtracker">https://github.com/hbrobotics/hbrc_robots/scout/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>scout_apps</run_depend>
  <run_depend>scout_bringup</run_depend>
  <run_depend>scout_description</run_depend>
  <run_depend>scout_teleop</run_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
