<package>
  <name>scout_bringup</name>
  <version>0.1.0</version>

  <description>Scout Startup Files</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/hbrobotics/hbrc_robots/scout_bringup</url>
  <url type="bugtracker">https://github.com/hbrobotics/hbrc_robots/scout/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_arduino_python</run_depend>
  <run_depend>ros_arduino_msgs</run_depend>

</package>